# notification

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  client.php  config.json  notifd.php  php.ini
libs/: http-parser.cmake  jansson.cmake  leveldb.cmake  libuv.cmake
src/: adlist.c  config.c  db.c  dict.c  dict.h  dict_types.c  httpd.c  id.c  main.c  notifd.h  pubsub.c  refcount.h  server.c  web.c
tests/: TestSuite.php  basicTest.php
